RESOLVED FIXED42862
WebGL in CSS Canvas crashes
https://bugs.webkit.org/show_bug.cgi?id=42862
Summary WebGL in CSS Canvas crashes
Simon Fraser (smfr)
Reported 2010-07-22 17:42:55 PDT
Created attachment 62367 [details] Testcase Using WebGL in a CSS canvas (i.e. fetching the context via document.getCSSCanvasContext()) crashes. If I make a trivial fix for the crash, it still doesn't render.
Attachments
Testcase (3.00 KB, text/html)
2010-07-22 17:42 PDT, Simon Fraser (smfr)
no flags
Patch with test cases (48.51 KB, patch)
2010-08-27 14:01 PDT, Chris Marrin
simon.fraser: review+
James Robinson
Comment 1 2010-07-22 18:12:30 PDT
Why do we support CSS canvases in WebKit? Is this a regression or has this always crashed?
Simon Fraser (smfr)
Comment 2 2010-07-22 21:16:35 PDT
(In reply to comment #1) > Why do we support CSS canvases in WebKit? We invented it. > Is this a regression or has this always crashed? It has never worked with a WebGL canvas.
Chris Marrin
Comment 3 2010-07-26 11:11:35 PDT
*** Bug 30722 has been marked as a duplicate of this bug. ***
Chris Marrin
Comment 4 2010-07-26 11:13:23 PDT
The above test is one use case of the feature. We need to add a set of tests when this bug is fixed to handle all the other use cases as well.
Simon Fraser (smfr)
Comment 5 2010-07-26 11:20:48 PDT
Chris Marrin
Comment 6 2010-08-27 14:01:23 PDT
Created attachment 65764 [details] Patch with test cases
James Robinson
Comment 7 2010-08-27 14:04:05 PDT
Cool! One minor request: can the tests be made dumpAsText() with javascript querying that the rendering result is correct? Maintaining platform-specific image results is a pain and it doesn't seem strictly necessary in this case.
James Robinson
Comment 8 2010-08-27 14:05:13 PDT
(In reply to comment #7) > Cool! One minor request: can the tests be made dumpAsText() with javascript querying that the rendering result is correct? Maintaining platform-specific image results is a pain and it doesn't seem strictly necessary in this case. Oops, I just realized that you couldn't verify that the background showed up correctly with a pure script test. Never mind, disregard comment #7 please :)
Simon Fraser (smfr)
Comment 9 2010-08-27 14:06:06 PDT
Comment on attachment 65764 [details] Patch with test cases > Index: WebCore/ChangeLog > =================================================================== > + * html/HTMLCanvasElement.cpp: > + (WebCore::HTMLCanvasElement::copiedImage): Add logic to get image from WebGL so it works with Hyatt's new ImageBuffer logic This comment will not make any sense in a few months. Be more specific about what hyatt's changes were. Also, why didn't we see any other test bustage because of this? What would we have had to test to see breakage: drawing a 3d canvas into a 2d canvas?
Chris Marrin
Comment 10 2010-08-27 14:20:23 PDT
(In reply to comment #7) > Cool! One minor request: can the tests be made dumpAsText() with javascript querying that the rendering result is correct? Maintaining platform-specific image results is a pain and it doesn't seem strictly necessary in this case. I think it is necessary. I want to know that we are getting the correct rendering results, especially in the repaint test, which makes sure WebGL can modify the CSS background a second time. I know it's painful, but in this case I really think we need pixel tests.
Chris Marrin
Comment 11 2010-08-27 14:20:48 PDT
(In reply to comment #8) > (In reply to comment #7) > > Cool! One minor request: can the tests be made dumpAsText() with javascript querying that the rendering result is correct? Maintaining platform-specific image results is a pain and it doesn't seem strictly necessary in this case. > > Oops, I just realized that you couldn't verify that the background showed up correctly with a pure script test. Never mind, disregard comment #7 please :) Too late :-)
Chris Marrin
Comment 12 2010-08-27 14:36:43 PDT
Note You need to log in before you can comment on or make changes to this bug.